--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -1,15 +1,20 @@
 <header><h3>{{title}}</h3></header>
 <main>
-    <body class = "card">
-        <button>Task Done</button>
-        <div class = "task">
-            {{Task}}
+    <body >
+        <div class = "card flex flex-row flex-grow space-x-4 border-4">
+            <button class = "border-r-4">Task Done</button>
+        <div class = "task flex flex-grow border r-2 justify-center">
+            {{!-- {{Task}} --}}
+            Task
         </div>
-        <div class = "icon">
+        <div class = "icon flex flex-grow border r-2 justify-center">
+            {{!-- {{Icon}} --}}
             Icon
         </div>
-        <div class = "due-date">
-            {{due_date}}
+        <div class = "due-date flex flex-grow border r-2 justify-center">
+            {{!-- {{due_date}} --}}
+            due date
+        </div>
         </div>
     </body>
 </main>
