--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project 2</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
