saving style changes

--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -1,7 +1,7 @@
 <header><h3>{{title}}</h3></header>
 <main>
     <body >
-        <div class = "card flex flex-row flex-grow space-x-4 border-4">
+        <div class="bg-salmon">
             <button class = "border-r-4">Task Done</button>
         <div class = "task flex flex-grow border r-2 justify-center">
             {{!-- {{Task}} --}}
