--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,26 +8,26 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="bg-gray-200">
   <header>
-    <h1>blah Blog</h1>
+    <h1 class="text-3xl font-extrabold m-5 text-indigo-700 ">blah Blog</h1>
   </header>
-  <nav>
-      <ul>
-        <a href="/">Home</a>
-        <a href="/">Dashboard</a>
+  <nav class="mx-5 font-extrabold bg-slate-500">
+      <ul class="">
+        <a class="mr-2 hover:text-gray-700"href="/">Home</a>
+        <a class="mr-2  hover:text-gray-700"href="/">Dashboard</a>
         {{#if logged_in}}
         <button id="logout">Logout</button>
         <script src='/js/logout.js'></script>
           {{else}}
-          <a href="login">Login</a>
+          <a class="mr-2  hover:text-gray-700"href="login">Login</a>
         {{/if}}
       </ul>
     </nav>
-  <main>
-    <div class="gallery">
+  <main class="flex justify-center m-5 w-10/12">
+    
       {{{body}}}
-    </div>
+
   </main>
 </body>
 
