--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -1,23 +1,10 @@
 <header><h3>{{title}}</h3></header>
-<main>
-    <body >
-        <div class = "card flex flex-row flex-grow space-x-4 border-4">
-            <button class = "border-r-4">Task Done</button>
-        <div class = "task flex flex-grow border r-2 justify-center">
-            {{!-- {{Task}} --}}
-            Task
-        </div>
-        <div class = "icon flex flex-grow border r-2 justify-center">
-            {{!-- {{Icon}} --}}
-            Icon
-        </div>
-        <div class = "due-date flex flex-grow border r-2 justify-center">
-            {{!-- {{due_date}} --}}
-            due date
-        </div>
-        </div>
-    </body>
-</main>
-<footer>
-
-</footer>
+<header class = "flex flex-row flex grow space x-4">
+<h3 class = "flex flex-row flex-grow border r-2 justify-center relative left-32"> Tasks</h3>
+<h3 class = "flex flex-row flex-grow border r-2 justify-center"> Icon</h3>
+<h3 class = "flex flex-row flex-grow border r-2 justify-center"> Due Date</h3>
+</header>
+ {{!-- {{#each Project}}
+    {{> tasks}}
+  {{/each}} --}}
+  {{>tasks}}
