added basic styling to page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,31 +21,5 @@
   <a class="text-xs" href="/signup">Sign up here if you don't already have an account</a>
 </section>
 
-{{! <section class="m-3">
 
-  <h3>Sign Up</h3>
-  <form action="" id="signup-form">
-
-    <input
-      class="border-solid border-2 border-blue-950"
-      type="text"
-      placeholder="Name"
-      id="user-name"
-    />
-    <input
-      class="border-solid border-2 border-blue-950"
-      type="text"
-      placeholder="Email"
-      id="user-email"
-    />
-    <input
-      class="border-solid border-2 border-blue-950"
-      type="text"
-      placeholder="Password"
-      id="user-password"
-    />
-    <button>Signup</button>
-  </form>
-</section> }}
-
-<script src="/js/loginSignUp.js"></script>
+<script src="/js/login.js"></script>
