readded middleware to public folder

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,3 @@
-
-
-
-
 <section>
 
   <h3 class="text-xl">Sign Up</h3>
@@ -31,10 +27,11 @@
       placeholder="Confirm Password"
       id="user-password-confirmation"
     />
-    <button>Signup</button>
+    <button
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-20"
+    >Signup</button>
   </form>
 
 </section>
 
-
-<script src="/js/loginSignUp.js"></script>
+<script src="/js/signup.js"></script>
