--- a/views/create_projects.handlebars
+++ b/views/create_projects.handlebars
@@ -1,21 +1,14 @@
+{{!-- Once they click Create Project they are directed to create_tasks page --}}
 <header><h3>{{title}}</h3></header>
-<header class = "flex flex-col max-w">
+<body class = "flex flex-col max-w">
 <div class="flex flex-col max-w-sm">
 <div>
-<input class = "flex flex-col max-w h-8 border-solid border-2 border-blue-950 my-2"> Project</input>
+<input class = "flex flex-col max-w h-8 border-solid border-2 border-blue-950 my-2"> Project Name</input>
 </div>
-<div>
-<input class = "flex flex-col max-w h-8 border-solid border-2 border-blue-950 my-2"> Tasks</input>
-</div>
-<div>
-<input class = "flex flex-col max-w h-8 border-solid border-2 border-blue-950 my-2"> Assign task to: </input>
-</div>
-<div>
-<input class = "flex flex-col max-w h-8 border-solid border-2 border-blue-950 my-2"> Due Date</input>
-</div>
+
 <button
       class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-40"
     >Create Project</button>
 </div>
-</header>
+</body>
  
