added styling to the task_create page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
         {{/if}}
       </ul>
     </nav>
-  <main class="flex justify-center m-5 w-10/12">
+  <main class="flex flex-grow justify-center m-5 w-10/12">
     
       {{{body}}}
 
