--- a/views/create_projects.handlebars
+++ b/views/create_projects.handlebars
@@ -3,12 +3,15 @@
 <body class = "flex flex-col max-w">
 <div class="flex flex-col max-w-sm">
 <div>
-<input class = "flex flex-col max-w h-8 border-solid border-2 border-blue-950 my-2"> Project Name</input>
+<input class = " max-w h-8 border-solid border-2 border-blue-950 my-2"> Project Name</input>
+</div>
+<div>
+<input class = " max-w h-8 border-solid border-2 border-blue-950 my-2"> Project Due Date</input>
 </div>
 
 <button
       class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-40"
     >Create Project</button>
 </div>
+<a href="/create_tasks"></a>
 </body>
- 
