--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,10 +18,10 @@
       class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-20"
     >Login</button>
   </form>
-  <a class="text-xs" href="/signup">Sign up here if you don't already have an account</a>
+  <p class="text-xs">Sign up <a class = "text-blue-500 font-bold" href="/sign_up"> here </a> if you don't already have an account</p>
 </section>
 
-{{! <section class="m-3">
+{{! <section class="m-3"
 
   <h3>Sign Up</h3>
   <form action="" id="signup-form">
