updates for individual projects

--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -4,7 +4,6 @@
 <h3 class = "flex flex-row flex-grow border r-2 justify-center"> Icon</h3>
 <h3 class = "flex flex-row flex-grow border r-2 justify-center"> Due Date</h3>
 </header>
- {{!-- {{#each Project}}
+ {{#each Project}}
     {{> tasks}}
-  {{/each}} --}}
-  {{>tasks}}
+  {{/each}}
