formatted dude date on projects

--- a/views/partials/projects.handlebars
+++ b/views/partials/projects.handlebars
@@ -1,1 +1,6 @@
-<h3>{{title}}</h3>
+<section>
+  <h3>Project Name: {{title}}</h3>
+  <h4>Due: <p id="due-date">{{due_date}}</p></h4>
+</section>
+
+<script src="js/displayProjects.js"></script>
