--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -1,5 +1,5 @@
 <section class="flex flex-col grow items-center">
-<h3 class="text-3xl mb-5">project title</h3>
+<h3 class="text-3xl mb-5">project title{{projectName}}</h3>
 <button
       class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-40 mb-5"
     >Create New Task</button>
@@ -12,4 +12,7 @@
 
 <input placeholder="Due date"class = "flex-none h-8 border-solid border-2 border-blue-950 m-1"></input>
 </form>
+<div id="project">
+    {{>project}}
+</div>
 </section>
