--- a/views/partials/tasks.handlebars
+++ b/views/partials/tasks.handlebars
@@ -1,23 +1,16 @@
-<main>
-    <body >
-        <div class = "card flex flex-row flex-grow space-x-4 border-4">
-            <input type="checkbox" id="task-done" name="task-done" unchecked>
-            <label for="task-done">Task Done</label>
-        <div class = "task flex flex-grow border r-2 justify-center">
-            {{!-- {{Task}} --}}
-            Task
-        </div>
-        <div class = "icon flex flex-grow border r-2 justify-center">
-            {{!-- {{Icon}} --}}
-            Icon
-        </div>
-        <div class = "due-date flex flex-grow border r-2 justify-center">
-            {{!-- {{due_date}} --}}
-            due date
-        </div>
-        </div>
-    </body>
-</main>
-<footer>
-
-</footer>
+<div class="card flex flex-row flex-grow space-x-4 border-4">
+  <input type="checkbox" id="task-done" name="task-done" unchecked />
+  <label for="task-done">Task Done</label>
+  <div class="task flex flex-grow border r-2 justify-center">
+    {{Task}}
+    Task
+  </div>
+  <div class="icon flex flex-grow border r-2 justify-center">
+    {{Icon}}
+    Icon
+  </div>
+  <div class="due-date flex flex-grow border r-2 justify-center">
+    {{due_date}}
+    due date
+  </div>
+</div>
