adding todos for getting time left

--- a/views/partials/projects.handlebars
+++ b/views/partials/projects.handlebars
@@ -1,6 +1,8 @@
-<section>
-  <h3>Project Name: {{title}}</h3>
-  <h4>Due: <p id="due-date">{{due_date}}</p></h4>
+<section class="flex flex-row space-between grow bg-green-400 justify-center">
+  <h3 class="text-3xl ">{{title}}</h3>
+  <h3 class="text-3xl ">{{due_date}}</h3>
+  <h3 class="text-3xl " id="time-left">time left</h3>
+  
 </section>
 
 <script src="js/displayProjects.js"></script>
