getting latest pull from dev

--- a/views/partials/tasks.handlebars
+++ b/views/partials/tasks.handlebars
@@ -4,15 +4,15 @@
             <input type="checkbox" id="task-done" name="task-done" unchecked>
             <label for="task-done">Task Done</label>
         <div class = "task flex flex-grow border r-2 justify-center">
-            {{!-- {{Task}} --}}
+            {{Task}}
             Task
         </div>
         <div class = "icon flex flex-grow border r-2 justify-center">
-            {{!-- {{Icon}} --}}
+            {{Icon}}
             Icon
         </div>
         <div class = "due-date flex flex-grow border r-2 justify-center">
-            {{!-- {{due_date}} --}}
+            {{due_date}}
             due date
         </div>
         </div>
