create new project functionality

--- a/views/create_projects.handlebars
+++ b/views/create_projects.handlebars
@@ -2,10 +2,10 @@
 <section class="flex flex-col grow">
 <h3 class="text-3xl">New Project</h3>
 <form class="flex flex-col my-4">
-<label for="task-name">Project Title</label>
-<input name="task-name" class = "max-w h-8 border-solid border-2 border-blue-950 my-2"></input>
-<label for="task-name">Due date</label>
-<input class = "max-w h-8 border-solid border-2 border-blue-950 my-2"></input>
+<label for="task-name" >Project Title</label>
+<input name="task-name" class = "max-w h-8 border-solid border-2 border-blue-950 my-2" id="project"></input>
+<label for="task-name" >Due date</label>
+<input class = "max-w h-8 border-solid border-2 border-blue-950 my-2" id = "due-date"></input>
 
 
 
@@ -14,3 +14,5 @@
     >Create Project</button>
 </form>
 </section>
+
+<script src ="/js/createProject.js"></script>
