converted time from server to display time on homepage projects

--- a/views/partials/projects.handlebars
+++ b/views/partials/projects.handlebars
@@ -1,7 +1,7 @@
 <section class="flex flex-row space-between grow bg-green-400 justify-center">
   <h3 class="text-3xl ">{{title}}</h3>
   <h3 class="text-3xl ">{{due_date}}</h3>
-  <h3 class="text-3xl " id="time-left">time left</h3>
+  <h3 class="text-3xl " id="time-left">{{time_until_due}}</h3>
   
 </section>
 
