display project title on task create page

--- a/views/create_tasks.handlebars
+++ b/views/create_tasks.handlebars
@@ -1,6 +1,7 @@
 {{!-- Will have the title of the project they just added here --}}
+
 <section class="flex flex-col grow">
-<h3 class="text-3xl">project title</h3>
+<h3 class="text-3xl">{{formatData.title}}</h3>
 <form class="flex flex-col my-4">
 <label for="task-name">Task name</label>
 <input name="task-name" class = "max-w h-8 border-solid border-2 border-blue-950 my-2"></input>
