--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,5 @@
+<a href="/create_projects" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-20"
+>Create a project</a>
 {{#each yourProjects}}
 {{> projects}}
 {{/each}}
