--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -7,10 +7,18 @@
     <div
       class="task-card border-solid border-2 border-blue-950 my-2 rounded bg-{{status}}-500"
     >
+      <button id="taskCompleted">Completed</button>
       <h3 class="font-bold">{{name}} </h3>
       <p>{{description}}</p>
+      <select name="status" class="status" id="{{id}}">
+        <option value=" "></option>
+        <option value="1">Off-track</option>
+        <option value="2">Need-Assistance</option>
+        <option value="3">On-Track</option>
+      </select>
+
       {{!-- <button class="del-btn" data-proj-id="{{id}}">Delete me!</button> --}}
     </div>
   {{/each}}
-
+  <script src="/js/createProject.js"></script>
 </Section>
