changed password input types to password

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
     />
     <input
       class="border-solid border-2 border-blue-950 my-2"
-      type="text"
+      type="password"
       placeholder="Password"
       id="login-password"
     />
