--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -17,13 +17,13 @@
     />
     <input
       class="border-solid border-2 border-blue-950 mt-2"
-      type="text"
+      type="password"
       placeholder="Password"
       id="user-password"
     />
     <input
       class="border-solid border-2 border-blue-950 mt-2"
-      type="text"
+      type="password"
       placeholder="Confirm Password"
       id="user-password-confirmation"
     />
