--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -20,5 +20,5 @@
       {{!-- <button class="del-btn" data-proj-id="{{id}}">Delete me!</button> --}}
     </div>
   {{/each}}
-  <script src="/js/createProject.js"></script>
+  <script src="/js/project.js"></script>
 </Section>
