--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -4,6 +4,7 @@
   <p class="font-bold">Days Until project Due: {{time_until_due}}</p>
 
   {{#each Tasks}}
+  <a href="/task/{{id}}">
     <div
       class="task-card border-solid border-2 border-blue-950 my-2 rounded bg-{{status}}-500"
     >
@@ -16,6 +17,7 @@
         <option value="2">Need-Assistance</option>
         <option value="3">On-Track</option>
       </select>
+      </a>
 
       {{!-- <button class="del-btn" data-proj-id="{{id}}">Delete me!</button> --}}
     </div>
