--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,7 @@
+{{#if logged_in}}
 <a href="/create_projects" class="flex w-60 justify-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-20"
 >Create a project</a>
+{{/if}}
 {{#each yourProjects}}
 {{> projects}}
 {{/each}}
