removed create project button from projects partial

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
           <button id="logout">Logout</button>
           <script src="/js/logout.js"></script>
         {{else}}
-          <a class="mr-2 hover:text-gray-700" href="login">Login</a>
+          <a class="mr-2 hover:text-gray-700" href="/login">Login</a>
         {{/if}}
       </ul>
     </nav>
