--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <section class="m-3">
 
-  <h3 class="text-blue-500 font-bold text-xl">Login</h3>
+  <h3 class="text-[#0057e7] font-bold text-xl">Login</h3>
   <form class="flex flex-col" action="" id="login-form">
     <input
       class="border-solid border-2 border-blue-950 mt-2 pr-8"
@@ -15,11 +15,11 @@
       id="login-password"
     />
     <button
-      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-20"
+      class="bg-[#3385c6] hover:bg-[#0057e7] text-white font-bold py-1 px-2 border border-blue-700 rounded w-20"
     >Login</button>
   </form>
   <p class="text-xs">Sign up
-    <a class="text-blue-500 font-bold" href="/sign_up"> here </a>
+    <a class="text-[#0057e7] font-bold" href="/sign_up"> here </a>
     if you don't already have an account</p>
 </section>
 
