--- a/views/partials/projects.handlebars
+++ b/views/partials/projects.handlebars
@@ -1,7 +1,7 @@
 <form class="m-4">
 
   <a
-    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-30 align-items center"
+    class="bg-[#3385c6] hover:bg-[#0057e7] text-white font-bold py-1 px-2 border border-blue-700 rounded w-30 align-items center"
     href="/create_projects"
   >Create New Project</a>
   <section
@@ -20,9 +20,12 @@
         >{{time_until_due}}</h3></span>
     </a>
   </section>
+  </form>
+
+<script src="js/displayProjects.js"></script>
   
 {{!--adding comment --}}
-<a
+{{!-- <a
 class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-30 align-items center"
 href="/create_projects">Create New Project</a>
 <a href="/project/{{id}}">
@@ -32,7 +35,4 @@ href="/create_projects">Create New Project</a>
     <span class="inline-block m-3"><h3 class="text-2xl" id="time-left">{{time_until_due}}</h3></span>
  </a>
 </section>
-
-</form>
-
-<script src="js/displayProjects.js"></script>
+ --}}
