--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
 <section>
 
-  <h3 class="text-xl">Sign Up</h3>
+  <h3 class="text-xl text-[#0057e7]">Sign Up</h3>
 
   <form class="flex flex-col" action="" id="signup-form">
     <input
@@ -28,7 +28,7 @@
       id="user-password-confirmation"
     />
     <button
-      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-20"
+      class="bg-[#3385c6] hover:bg-[#0057e7] text-white font-bold py-1 px-2 border border-blue-700 rounded w-20"
     >Signup</button>
   </form>
 
