--- a/views/partials/projects.handlebars
+++ b/views/partials/projects.handlebars
@@ -1,21 +1,14 @@
+<article
+  class="flex flex-row space-between w-11/12 rounded bg-green-400 justify-center my-2"
+>
+  <a href="/project/{{id}}">
+  <section>
 
-  <section
-    class="flex flex-row space-between grow rounded bg-green-400 justify-center"
-    id="project-id"
-    value="{{id}}"
-  >
-    <a href="/project/{{id}}">
-      <span class="inline-block m-3"><h3 class="text-2xl">{{title}}</h3></span>
-      <span class="inline-block m-3"><h3
-          class="text-2xl"
-        >{{due_date}}</h3></span>
-      <span class="inline-block m-3"><h3
-          class="text-2xl"
-          id="time-left"
-        >{{time_until_due}}</h3></span>
-    </a>
+    <h3 class="text-lg">{{title}}</h3>
+    <h3
+        class="time-left text-lg"
+        
+      >{{time_until_due}}</h3>
+  </a>
   </section>
-
-
-
-<script src="js/displayProjects.js"></script>
+</article>
