added hours left display

--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -8,7 +8,7 @@
     <div
       class="task-card hover:bg-blue-700 border-solid border-2 border-blue-950 my-2 rounded bg-{{status}}-500"
     >
-      <button id="taskCompleted" class="ç">Completed</button>
+      <button id="taskCompleted">Completed</button>
       <h3 class="font-bold">{{name}} </h3>
       <p>{{description}}</p>
       </a>
