changed name on display

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 
   <body class="bg-gray-200">
     <header>
-      <h1 class="text-3xl font-extrabold m-5 text-indigo-700">blah Blog</h1>
+      <h1 class="text-3xl font-extrabold m-5 text-indigo-700">@aGlance</h1>
     </header>
     <nav class="mx-5 font-extrabold bg-slate-500">
       <ul class="">
