removed dashboard link

--- a/views/create_projects.handlebars
+++ b/views/create_projects.handlebars
@@ -1,18 +1,18 @@
 {{!-- Once they click Create Project they are directed to create_tasks page --}}
 <section class="flex flex-col grow">
-<h3 class="text-3xl">New Project</h3>
-<form class="flex flex-col my-4">
-<label for="task-name" >Project Title</label>
-<input name="task-name" class = "max-w h-8 border-solid border-2 border-blue-950 my-2" id="project"></input>
-<label for="task-name" >Due date</label>
-<input class = "max-w h-8 border-solid border-2 border-blue-950 my-2" id = "due-date"></input>
+  <h3 class="text-3xl">New Project</h3>
+  <form class="flex flex-col my-4">
+    <label for="task-name">Project Title</label>
+    <input name="task-name" class="max-w h-8 border-solid border-2 border-blue-950 my-2" id="project"></input>
+    <label for="task-name">Due date</label>
+    <input class="max-w h-8 border-solid border-2 border-blue-950 my-2" id="due-date"></input>
 
 
 
-<button
-      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-40"
-    >Create Project</button>
-</form>
+    <button
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-40">Create
+      Project</button>
+  </form>
 </section>
 
-<script src ="/js/createProject.js"></script>
+<script src="/js/createProject.js"></script>
