--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,25 +2,16 @@
 
   <h3 class="text-blue-500 font-bold text-xl">Login</h3>
   <form class="flex flex-col" action="" id="login-form">
-    <input
-      class="border-solid border-2 border-blue-950 mt-2 pr-8"
-      type="text"
-      placeholder="Email"
-      id="login-email"
-    />
-    <input
-      class="border-solid border-2 border-blue-950 my-2"
-      type="password"
-      placeholder="Password"
-      id="login-password"
-    />
+    <input class="border-solid border-2 border-blue-950 mt-2 pr-8" type="text" placeholder="Email" id="login-email" />
+    <input class="border-solid border-2 border-blue-950 my-2" type="password" placeholder="Password"
+      id="login-password" />
     <button
-      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-20"
-    >Login</button>
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-20">Login</button>
   </form>
   <p class="text-xs">Sign up
     <a class="text-blue-500 font-bold" href="/sign_up"> here </a>
-    if you don't already have an account</p>
+    if you don't already have an account
+  </p>
 </section>
 
 <script src="/js/login.js"></script>
