--- a/views/partials/projects.handlebars
+++ b/views/partials/projects.handlebars
@@ -1,14 +1,22 @@
 <article
-  class="flex flex-row space-between w-11/12 rounded bg-green-400 justify-center my-2"
+  class="flex flex-row space-between w-11/12 rounded bg-{{status}} justify-center my-2"
 >
   <a href="/project/{{id}}">
   <section>
 
-    <h3 class="text-lg">{{title}}</h3>
+    <h3 class="text-2xl font-bold text-center">{{title}}</h3>
+    <section class="flex flex-row" >
+
     <h3
-        class="time-left text-lg"
-        
+        class="time-left text-lg pr-4"
       >{{time_until_due}}</h3>
-  </a>
+      <p
+      class="text-lg"
+      >Status:</p> <p
+      class="text-2xl pl-4"
+      >{{icon}}</p>
+      
+    </section>
   </section>
+  </a>
 </article>
