--- a/views/partials/projects.handlebars
+++ b/views/partials/projects.handlebars
@@ -6,7 +6,7 @@
   <section>
 
     <h3 class="text-2xl font-bold text-center">{{title}}</h3>
-    <section class="flex flex-row" >
+    <section class="flex flex-row justify-center" >
 
     <h3
         class="time-left text-lg pr-4"
