--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -1,12 +1,13 @@
+
 <section id="project" class="flex flex-col mt-2 pr-8" data-id={{project.id}}>
   <h2 class="font-bold text-3xl">{{project.title}}</h2>
   <p class="font-bold">Project Due Date: {{project.due_date}}</p>
   <p class="font-bold">Days Until project Due: {{project.time_until_due}}</p>
 
   {{#each project.Tasks}}
+  <button id = "taskCompleted"> Task Completed</button>
   <a href="/task/{{id}}">
     <div class="task-card hover:bg-blue-700 border-solid border-2 border-blue-950 my-2 rounded bg-{{status}}-500">
-      <button id="taskCompleted">Completed</button>
       <h3 class="font-bold">{{name}} </h3>
       <p>{{description}}</p>
   </a>
