added project Delete and task Delete

--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -7,7 +7,7 @@
   <a href="/task/{{id}}">
     <div
       class="task-card  hover:drop-shadow-xl border-solid border-2 border-blue-950 my-2 rounded bg-{{status}}-500"
-    >
+    data-id="{{id}}">
       
       <h3 class="font-bold p-1 text-center">{{name}} </h3>
       <p class="p-1"><span class="font-bold">Description:</span> {{description}}</p>
