--- a/views/partials/projects.handlebars
+++ b/views/partials/projects.handlebars
@@ -1,9 +1,14 @@
 <article
   class="flex flex-row space-between w-11/12 rounded bg-green-400 hover:drop-shadow-xl border-solid border-2 border-blue-950 justify-center my-2"
+  id="project-article"
+  data-id="{{id}}"
 >
-  <a class="w-full text-center " href="/project/{{id}}">
+  <a class="w-full text-center" href="/project/{{id}}">
     <h3 class="text-lg font-bold">{{title}}</h3>
-    <h3 class="time-left text-lg font-bold"
-        >{{time_until_due}}</h3>
+    <h3 class="time-left text-lg font-bold">{{time_until_due}}</h3>
   </a>
 </article>
+<button
+  id="project-completed"
+  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded my-2 w-3/4"
+>Completed</button>
