added calendars to create task and project

--- a/views/create_tasks.handlebars
+++ b/views/create_tasks.handlebars
@@ -6,7 +6,9 @@
         <label for="task-name">Task name</label>
         <input name="task-name" class="max-w h-8 border-solid border-2 border-blue-950 my-2 " id="task-name"></input>
         <label for="task-name">Due date</label>
-        <input class="max-w h-8 border-solid border-2 border-blue-950 my-2 " id="due-date"></input>
+        </div>
+        <input datepicker type="text" class="  max-w h-8 border-solid border-2 border-blue-950 my-2" placeholder="Select date" id="due-date">
+        </div>
         <label for="task-name">Description</label>
         <textarea class="max-w h-30 border-solid border-2 border-blue-950 my-2" id="description"></textarea>
         <button
