--- a/views/create_projects.handlebars
+++ b/views/create_projects.handlebars
@@ -5,10 +5,9 @@
     <label for="task-name">Project Title</label>
     <input name="task-name" class="max-w h-8 border-solid border-2 border-blue-950 my-2" id="project"></input>
     <label for="task-name">Due date</label>
-    <input class="max-w h-8 border-solid border-2 border-blue-950 my-2" id="due-date"></input>
-
-
-
+      </div>
+      <input datepicker type="text" class="  max-w h-8 border-solid border-2 border-blue-950 my-2" placeholder="Select date" id="due-date">
+    </div>
     <button
       class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-40">Create
       Project</button>
