fixed issue where text updated to NaN and turned off set timer

--- a/views/partials/projects.handlebars
+++ b/views/partials/projects.handlebars
@@ -8,14 +8,16 @@
     <h3 class="text-2xl font-bold text-center">{{title}}</h3>
     <section class="flex flex-row justify-center" >
 
-    <h3
-        class="time-left text-lg pr-4"
-      >{{time_until_due}}</h3>
-      <p
-      class="text-lg"
-      >Status:</p> <p
-      class="text-2xl pl-4"
-      >{{icon}}</p>
+      <h3
+        class="time-left text-lg pr-1"
+        >{{time_until_due}}</h3>
+
+      <span
+       class="time-left-span text-lg pr-4"
+       ></span>
+
+      <p class="text-lg">Status:</p>
+      <p class="text-2xl pl-4">{{icon}}</p>
       
     </section>
   </section>
