--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -1,8 +1,9 @@
+<a href="/projects/edit/{{project.id}}">
 <section id="project" class="flex flex-col mt-2 pr-8 items-center" data-id={{project.id}}>
   <h2 class="font-bold text-3xl">{{project.title}}</h2>
   <p class="font-bold">Project Due Date: {{project.due_date}}</p>
   <p class="font-bold">Days Until project Due: {{project.time_until_due}}</p>
-
+<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded my-2 w-3/4">Update Project</button></a>
   {{#each project.Tasks}}
   <a href="/task/{{id}}">
     <div
