--- a/views/partials/projects.handlebars
+++ b/views/partials/projects.handlebars
@@ -1,24 +1,23 @@
 <article
-
-  class="flex flex-row space-between w-11/12 rounded bg-{{status}} hover:drop-shadow-xl border-solid border-2 border-blue-950 justify-center my-2"
+  class="flex flex-row space-between w-11/12 rounded bg-{{status}}
+    hover:drop-shadow-xl border-solid border-2 border-blue-950 justify-center my-2"
 >
-  <a href="/project/{{id}}" class="w-full text-center ">
-  <section>
+  <a href="/project/{{id}}" class="w-full text-center">
+    <section>
 
-    <h3 class="text-2xl font-bold text-center">{{title}}</h3>
-    <section class="flex flex-row justify-center" >
+      <h3 class="text-2xl font-bold text-center">{{title}}</h3>
+      <section
+        class="flex flex-row justify-center"
+        id="project"
+        data-id="{{id}}"
+      >
 
-    <h3
-        class="time-left text-lg pr-4"
-      >{{time_until_due}}</h3>
-      <p
-      class="text-lg"
-      >Status:</p> <p
-      class="text-2xl pl-4"
-      >{{icon}}</p>
-      
+        <h3 class="time-left text-lg pr-4">{{time_until_due}}</h3>
+        <p class="text-lg">Status:</p>
+        <p class="text-2xl pl-4">{{icon}}</p>
+
+      </section>
     </section>
-  </section>
 
   </a>
 </article>
