--- a/views/individual_project.handlebars
+++ b/views/individual_project.handlebars
@@ -22,7 +22,7 @@
         <option value="2">Need-Assistance</option>
         <option value="3">On-Track</option>
       </select>
-      <button id="taskCompleted" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded my-2 w-3/4">Completed</button>
+      <button class="taskCompleted bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded my-2 w-3/4">Completed</button>
   {{/each}}
   <button id="new-task"
         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-1/2 m-2"
