--- a/views/partials/projects.handlebars
+++ b/views/partials/projects.handlebars
@@ -1,8 +1,8 @@
 <article
-  class="flex flex-row space-between w-11/12 rounded bg-{{status}}
-    hover:drop-shadow-xl border-solid border-2 border-blue-950 justify-center my-2"
+  class="flex flex-row justify-center space-between w-11/12 rounded bg-{{status}}
+    hover:drop-shadow-xl border-solid border-2 border-blue-950 my-2"
 >
-  <a href="/project/{{id}}" class="w-full text-center">
+  <a href="/project/{{id}}" class="text-center">
     <section>
 
       <h3 class="text-2xl font-bold text-center">{{title}}</h3>
