--- a/views/create_projects.handlebars
+++ b/views/create_projects.handlebars
@@ -6,7 +6,7 @@
     <input name="task-name" class="max-w h-8 border-solid border-2 border-blue-950 my-2" id="project"></input>
     <label for="task-name">Due date</label>
       </div>
-      <input datepicker type="text" class="  max-w h-8 border-solid border-2 border-blue-950 my-2" placeholder="Select date" id="due-date">
+      <input datepicker type="text" class="  max-w h-8 border-solid border-2 border-blue-950 my-2" autocomplete="off" placeholder="Select date" id="due-date">
     </div>
     <button
       class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-700 rounded w-40">Create
