--- a/views/create_tasks.handlebars
+++ b/views/create_tasks.handlebars
@@ -7,7 +7,7 @@
         <input name="task-name" class="max-w h-8 border-solid border-2 border-blue-950 my-2 " id="task-name"></input>
         <label for="task-name">Due date</label>
         </div>
-        <input datepicker type="text" class="  max-w h-8 border-solid border-2 border-blue-950 my-2" placeholder="Select date" id="due-date">
+        <input datepicker type="text" class="  max-w h-8 border-solid border-2 border-blue-950 my-2" autocomplete="off" placeholder="Select date" id="due-date">
         </div>
         <label for="task-name">Description</label>
         <textarea class="max-w h-30 border-solid border-2 border-blue-950 my-2" id="description"></textarea>
